src/test/deca/context/valid/created/test-comparaison-float-float.deca
//Description :
// Test d'une opération de comparaison
//
// Resultats :
//


{
    1.1 <3.3 ;
}
