src/test/deca/context/invalid/created/addString.deca
//Description :
// Verifie l'ajout de literalstring.
//
// Resultats :
// Erreur




{
    print("Michel"+"Forever") ;
    println("To"+"night") ;
}
